<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.mstepan</groupId>
    <artifactId>leetcode-java</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <assertj.version>3.15.0</assertj.version>
        <error.prone.core.version>2.3.2</error.prone.core.version>
        <java.version>21</java.version>
        <lmax.disruptor.version>3.4.4</lmax.disruptor.version>
        <mockito-version>2.21.0</mockito-version>
        <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
        <shade.plugin.version>3.4.0</shade.plugin.version>

        <!-- Spotless code formatting -->
        <spotless.plugin.version>2.37.0</spotless.plugin.version>
        <google.java.format.version>1.17.0</google.java.format.version>

        <!-- Jacoco code coverage -->
        <jacoco.line.coverage.minimum>80</jacoco.line.coverage.minimum>
        <jacoco.branch.coverage.minimum>80</jacoco.branch.coverage.minimum>

    </properties>

    <build>
        <plugins>

            <!-- Java compiler plugin with Error Prone (warnings enabled) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <argLine>@{argLine}</argLine>
                </configuration>
            </plugin>

            <!--
                  Spotless is a general-purpose formatting plugin. It is completely Ã la carte,
                  but also includes powerful "batteries-included" if you opt-in
                  https://github.com/diffplug/spotless/tree/master/plugin-maven
                  -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.plugin.version}</version>
                <configuration>
                    <java>
                        <removeUnusedImports/>
                        <googleJavaFormat>
                            <version>${google.java.format.version}</version>
                            <!-- Optional, available versions: GOOGLE, AOSP
                            https://github.com/google/google-java-format/blob/master/core/src/main/java/com/google/googlejavaformat/java/JavaFormatterOptions.java -->
                            <style>AOSP</style>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>format-sources</id>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${shade.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.github.mstepan.leetcode.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.5.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <profiles>
        <!-- If there are Java sources, apply code-coverage -->
        <profile>
            <id>profile-java-has-main-sources</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <file>
                    <exists>${basedir}/src/main/java</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.12</version>
                        <executions>
                            <execution>
                                <id>jacoco-prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>jacoco-report</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}/jacoco-reports</outputDirectory>
                                </configuration>
                            </execution>
                            <execution>
                                <id>jacoco-check</id>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <rule implementation="org.jacoco.maven.RuleConfiguration">
                                            <element>CLASS</element>
                                            <limits>
                                                <!-- Tweak this as you gain coverage -->
                                                <limit implementation="org.jacoco.report.check.Limit">
                                                    <counter>LINE</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>${jacoco.line.coverage.minimum}.0%</minimum>
                                                </limit>
                                                <limit implementation="org.jacoco.report.check.Limit">
                                                    <counter>BRANCH</counter>
                                                    <value>COVEREDRATIO</value>
                                                    <minimum>${jacoco.branch.coverage.minimum}.0%</minimum>
                                                </limit>
<!--                                                <limit implementation="org.jacoco.report.check.Limit">-->
<!--                                                    <counter>COMPLEXITY</counter>-->
<!--                                                    <value>COVEREDRATIO</value>-->
<!--                                                    <minimum>80.0%</minimum>-->
<!--                                                </limit>-->
                                            </limits>
                                            <excludes>

                                                <!-- Ignore all test classes -->
                                                <exclude>*Test</exclude>

                                                <!-- Excluded from coverage -->
                                                <exclude>com.github.mstepan.leetcode.concurrency.*</exclude>
                                                <exclude>com.github.mstepan.leetcode.*</exclude>

                                                <!-- TODO: temporary removed from coverage -->
                                                <exclude>com.github.mstepan.leetcode.hard.*</exclude>
                                                <exclude>com.github.mstepan.leetcode.medium.*</exclude>
                                                <exclude>com.github.mstepan.leetcode.other.*</exclude>
                                            </excludes>
                                        </rule>

                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
